2008-07-16  Jon Honeycutt  <jhoneycutt@apple.com>

        REGRESSION: Can't create windowless plug-in with Flash 9
        https://bugs.webkit.org/show_bug.cgi?id=20070

        Reviewed by Mark Rowe.

        * plugins/win/PluginPackageWin.cpp:
        (WebCore::PluginPackage::determineQuirks): Reverse argument order;
        PlatformModuleVersion constructor takes leastSig, mostSig.

2008-07-16  Eric Seidel  <eric@webkit.org>

        Reviewed by mitz.

        Attempt to make initializeATSUStyle human-readable by
        splitting it out into better-named static inline functions.

        No functional changes, thus no tests.

        * platform/graphics/mac/FontMac.mm:
        (WebCore::fontHasMirroringInfo):
        (WebCore::disableLigatures):
        (WebCore::initializeATSUStyle):

2008-07-16  Eric Seidel  <eric@webkit.org>

        No review, build fix only.

        Attempt to fix Mac build

        * WebCore.xcodeproj/project.pbxproj: Make TextRun.h a private header.

2008-07-16  Eric Seidel  <eric@webkit.org>

        Reviewed by mitz.

        Make ATSULayoutParameters a real C++ class
        (Give it a destructor to clean up after itself)
        (Also use OwnArrayPtr instead of manual member cleanup)

        * platform/graphics/mac/FontMac.mm:
        (WebCore::ATSULayoutParameters::ATSULayoutParameters):
        (WebCore::ATSULayoutParameters::~ATSULayoutParameters):
        (WebCore::overrideLayoutOperation):
        (WebCore::ATSULayoutParameters::initialize):
        (WebCore::Font::selectionRectForComplexText):
        (WebCore::Font::drawComplexText):
        (WebCore::Font::floatWidthForComplexText):
        (WebCore::Font::offsetForPositionForComplexText):

2008-07-16  Eric Seidel  <eric@webkit.org>

        Reviewed by mitz.

        Make ownership of copied UChar buffer clearer
        (and more leak-proof) by using a OwnArrayPtr.

        No functional changes, thus no tests.

        * platform/graphics/mac/FontMac.mm: